--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
-    "@mui/material": "^5.15.11",
-    "@mui/x-date-pickers": "^6.19.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "antd": "^5.15.0",
     "dayjs": "^1.11.10",
     "next": "^14.1.0",
     "react": "^18",
