--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
