fix: 로그인 로직 백엔드 API 통신 문제 해결

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@/components/*": ["src/components/*"]
     },
 
-    "types": ["jest", "node"]
+    "types": ["jest", "node", "kakao.maps.d.ts"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
