refactor: postDetail 페이지 리팩토링

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     "airbnb-typescript",
     "plugin:testing-library/react",
     "plugin:jest-dom/recommended",
-    "plugin:prettier/recommended",
-    "@typescript-eslint/parser"
+    "plugin:prettier/recommended"
   ],
 
   "parserOptions": {
